Fix issue with body at 100% overflow

--- a/stylesheets/boxGame.css
+++ b/stylesheets/boxGame.css
@@ -21,12 +21,14 @@ body {
   color: silver;
   width: 100%;
   height: 90%;
+  margin: 0;
+  padding: 0;
 }
 
 .content-wrapper {
    width: 100%;
    height: 85%;
-    border: 1px solid blue;
+    /*border: 1px solid blue;*/
 }
 
 .bullseye {
@@ -55,7 +57,7 @@ body {
 }
 
 .rxn-game-result {
-   border: 1px solid blue;
+   /*border: 1px solid blue;*/
    text-align: center;
 }
 
